WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300736
Fix timing out webvtt parsing WPT
https://bugs.webkit.org/show_bug.cgi?id=300736
Summary
Fix timing out webvtt parsing WPT
Dana Estra
Reported
2025-10-14 15:36:50 PDT
Fix timing out webvtt parsing WPT
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-14 15:36:59 PDT
<
rdar://problem/162636272
>
Dana Estra
Comment 2
2025-10-14 15:54:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52330
EWS
Comment 3
2025-10-15 09:48:31 PDT
Committed
301568@main
(b62552b4f697): <
https://commits.webkit.org/301568@main
> Reviewed commits have been landed. Closing PR #52330 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug