Fix timing out webvtt parsing WPT https://bugs.webkit.org/show_bug.cgi?id=300736 rdar://162636272

Reviewed by Eric Carlson.

This patch removes extraneous calls to CaptionUserPreferencesMediaAF::hasNullCaptionProfile()
inside CaptionUserPreferencesMediaAF.

Now the only call remaining is from captionsStyleSheetOverride(). When the default
MACaptionActiveProfile is set to the empty string, WebKit will not create a style sheet
based on system caption preferences. This is utilized by safari's WPT test runner
bot to prevent system caption styling from making Safari fail the WebVTT WPT tests.

The calls that this patch deletes were not necessary to implement this feature, and at
least one of the unnecessary calls was causing time outs to occur in WebVTT parsing WPT
tests.

* Source/WebCore/page/CaptionUserPreferencesMediaAF.cpp:
(WebCore::CaptionUserPreferencesMediaAF::testingMode const):
(WebCore::CaptionUserPreferencesMediaAF::captionsStyleSheetOverride const):

Canonical link: https://commits.webkit.org/301568@main